Implement JWT-based login and logout with cookies

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -11,10 +11,10 @@
 <body>
     <div class="navbar">
         <a id="barTitle">Crypto Wise</a>
-        <a href="#">篩選器</a>
-        <a href="#">自選股清單</a>
-        <a href="#">模擬交易</a>
-        <a href="/login" id="login">登入</a>
+        <a href="/">篩選器</a>
+        <a href="/coinList">自選股清單</a>
+        <a href="/trade">模擬交易</a>
+        <a href="/memberPage" id="login">會員管理</a>
     </div>
     <div class="maincontainer mt-4">
         <h2>篩選器</h2>
