--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -18,9 +18,9 @@
     <div class="navbar">
         <a id="barTitle">Crypto Wise</a>
         <a href="/">篩選器</a>
-        <a href="#">自選股清單</a>
-        <a href="#">模擬交易</a>
-        <a href="/login" id="login">登入</a>
+        <a href="/coinList">自選股清單</a>
+        <a href="/trade">模擬交易</a>
+        <a href="/memberPage" id="login">會員管理</a>
     </div>
         <div class="container">
             <div class="row justify-content-center mt-3">
@@ -43,7 +43,7 @@
                                     <a href="#">Forgot password?</a>
                                 </p>
                                 <div class="d-grid">
-                                    <button type="submit" class="btn btn-primary">Login</button>
+                                    <button type="button" class="btn btn-primary" id="user-login">Login</button>
                                 </div>
                                 <div class="mt-3 d-grid">
                                     <button type="submit" class="btn btn-outline-success">
