--- a/frontend/html/coinList.html
+++ b/frontend/html/coinList.html
@@ -12,49 +12,25 @@
     <div class="navbar">
         <a id="barTitle">Crypto Wise</a>
         <a href="/">篩選器</a>
-        <a href="/coinList" id="coinList">自選股清單</a>
-        <a href="/trade" id="trade">模擬交易</a>
+        <a href="/coinList">自選股清單</a>
+        <a href="/trade">模擬交易</a>
         <a href="/memberPage" id="login">會員管理</a>
     </div>
-    <div class="maincontainer mt-4">
-        <h2>篩選器</h2>
-        <p >請選擇時間單位</p>
-        <select id="tick">
-            <option>5m</option>
-            <option>15m</option>
-            <option>30m</option>
-            <option>1h</option>
-            <option>2h</option>
-            <option>4h</option>
-            <option>1d</option>
-            <option>1w</option>
-        </select>
-        <p >請輸入要比較的MA線值</p>
-        <div class="MAcontainer">
-            <input id="ma1" type="text" placeholder="輸入MA值">
-            <p>MA</p>
-            <select id="compare">
-                <option>大於</option>
-                <option>小於</option>
-                <option>等於</option>
-            </select>
-            <input id="ma2" type="text" placeholder="輸入要比較的MA值">
-            <p>MA</p>
-        </div>
-        <button id="MAsearch" class="mt-2">search</button>
-        <div class="custom-table">
-            <div class="custom-row-head">
-                <div class="custom-cell">篩選結果</div>
+        <div class="container">
+            <div class="row justify-content-center mt-3">
+                <div class="col-md-6">
+                    <!-- 登入後介面 -->
+                    <div class="card bg-dark" id="logout-card">
+                        <div class="card-body text-white">
+                            <h2 class="card-title text-center mb-4" >自選幣清單開發中</h2>
+                            <h3 class="card-title text-center mb-4" >敬請期待</h3>
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="custom-row-item">
-                <div class="custom-cell">追蹤</div>
-                <div class="custom-cell">交易對</div>
-                <div class="custom-cell">交易量排名</div>
-            </div>
-        </div>
         </div>
     </div>
-    <script type="module" src="../js/home.js"></script>
+    <script type="module" src="../js/logout.js"></script>
     <script type="module" src="../js/tokenVerify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
