--- a/frontend/html/login.html
+++ b/frontend/html/login.html
@@ -18,8 +18,8 @@
     <div class="navbar">
         <a id="barTitle">Crypto Wise</a>
         <a href="/">篩選器</a>
-        <a href="/coinList">自選股清單</a>
-        <a href="/trade">模擬交易</a>
+        <a href="/coinList" id="coinList">自選股清單</a>
+        <a href="/trade" id="trade">模擬交易</a>
         <a href="/memberPage" id="login">會員管理</a>
     </div>
         <div class="container">
@@ -90,6 +90,7 @@
         </div>
     </div>
     <script type="module" src="../js/login.js"></script>
+    <script type="module" src="../js/tokenVerify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
