refactor: Migrate SQL queries to Sequelize ORM

--- a/frontend/html/home.html
+++ b/frontend/html/home.html
@@ -29,7 +29,7 @@
             <option>1d</option>
             <option>1w</option>
         </select>
-        <p >請輸入要比較的MA線值</p>
+        <p >請輸入要比較的MA線值(僅支援MA值500以內,部分新幣資料不夠久可能無顯示)</p>
         <div class="MAcontainer">
             <input id="ma1" type="text" placeholder="輸入MA值">
             <p>MA</p>
